# liberrno

./: .gitignore  Makefile.am  README  acinclude.m4  configure.ac  errno.c  errno.h  liberrno-uninstalled.pc.in  liberrno.pc.in  p_liberrno.h
ux/: Makefile.am
ux/beos/: Makefile.am  errno.h
ux/cygwin/: Makefile.am  errno.h
ux/darwin/: Makefile.am  errno.h
ux/freebsd/: Makefile.am  errno.h
ux/interix/: Makefile.am  errno.h
ux/linux/: Makefile.am  errno.h
ux/minix/: Makefile.am  errno.h
ux/msvcrt/: Makefile.am  errno.h
ux/netbsd/: Makefile.am  errno.h
ux/neutrino/: Makefile.am  errno.h
ux/openbsd/: Makefile.am  errno.h
ux/solaris/: Makefile.am  errno.h
